# autoNodeLabel

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
autonodelabel/: main.py
